<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android" 
android:orientation="vertical" 
android:layout_width="match_parent" 
android:layout_height="match_parent"
android:paddingLeft="8dp"
android:paddingRight="8dp"
android:paddingTop="280dp"
android:background="@drawable/settings3d" 
android:tileMode="repeat" > 
	
	<LinearLayout
	android:orientation="horizontal" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
		<TextView 
        android:id="@+id/textViewQuestionFile"
        android:layout_weight="1"
        android:layout_width="0dp" 
        android:layout_height="35dp" 
        android:text="@string/textViewQuestionFileLabel" />
		<EditText 
        android:id="@+id/editTextQuestionFile" 
        android:hint="@string/editTextQuestionFileHint" 
        android:layout_weight="2"
        android:layout_width="0dp" 
        android:layout_height="35dp" 
        android:background="@android:drawable/editbox_background" />
	</LinearLayout>
		
	<LinearLayout
	android:orientation="horizontal" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
		<TextView 
	    android:id="@+id/textViewQuestionCnt"
	    android:layout_weight="1"
	    android:layout_width="0dp" 
	    android:layout_height="35dp" 
	    android:text="@string/textViewQuestionCntLabel" />
		<EditText 
	    android:id="@+id/editTextQuestionCnt" 
	    android:hint="@string/editTextQuestionCntHint" 
	    android:layout_weight="2"
	    android:layout_width="0dp" 
	    android:layout_height="35dp" 
	    android:background="@android:drawable/editbox_background" />
	</LinearLayout>
	
	<LinearLayout
	android:orientation="horizontal" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
		<TextView 
	    android:id="@+id/textViewTimeLimit"
	    android:layout_weight="1"
	    android:layout_width="0dp" 
	    android:layout_height="35dp" 
	    android:text="@string/textViewTimeLimitLabel" />
		<EditText 
	    android:id="@+id/editTextTimeLimit" 
	    android:hint="@string/editTextTimeLimitHint" 
	    android:layout_weight="2"
	    android:layout_width="0dp" 
	    android:layout_height="35dp" 
	    android:background="@android:drawable/editbox_background" />
	</LinearLayout>
	
	<LinearLayout
	android:orientation="horizontal" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:paddingTop="15dp">
    	<Button
    	android:id="@+id/buttonOk" 
    	android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/buttonSaveLabel"
        android:onClick="saveSettingsHandler" />
    	<Button
    	android:id="@+id/buttonCancel" 
    	android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/buttonCancelLabel"
        android:onClick="cancelSettingsHandler" />
	</LinearLayout>
	    
</LinearLayout>