<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android" 
android:orientation="vertical" 
android:layout_width="match_parent" 
android:layout_height="match_parent"
android:paddingLeft="8dp"
android:paddingRight="8dp"
android:paddingTop="360dp"
android:background="@drawable/quiz" 
android:tileMode="repeat"> 
	
	<LinearLayout
	android:orientation="horizontal" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
		<TextView 
        android:id="@+id/textViewUsername"
        android:text="@string/textViewUsernameLabel" 
        android:layout_weight="1"
        android:layout_width="0dp" 
        android:layout_height="35dp" />
		<EditText 
        android:id="@+id/editTextUsername" 
        android:hint="@string/editTextUsernameHint" 
        android:layout_weight="2"
        android:layout_width="0dp" 
        android:layout_height="35dp" 
        android:background="@android:drawable/editbox_background" />
	</LinearLayout>
		
	<LinearLayout
	android:orientation="horizontal" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:paddingTop="15dp" >
    	<Button
    	android:id="@+id/buttonOk" 
    	android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/buttonOkLabel"
        android:onClick="okUsernameHandler" />
    	<Button
    	android:id="@+id/buttonExit" 
    	android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/buttonExitLabel"
        android:onClick="exitUsernameHandler" />
	</LinearLayout>
	    
</LinearLayout>