<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android" 
android:orientation="vertical" 
android:layout_width="match_parent" 
android:layout_height="match_parent"
android:paddingLeft="8dp"
android:paddingRight="8dp"
android:paddingTop="8dp" >
	
	<TextView 
    android:id="@+id/textViewWallclock"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" />		

	<TextView 
    android:id="@+id/textViewQuestionNum"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" />		
	
	<EditText 
    android:id="@+id/editTextQuestion" 
    android:hint="@string/editTextQuestionHint" 
    android:layout_width="match_parent" 
    android:layout_height="100dp" 
    android:background="@android:drawable/editbox_background" />
	
	<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    	<RadioButton android:id="@+id/radioAnsChoice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"/>
   		<RadioButton android:id="@+id/radioAnsChoice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"/>
   		<RadioButton android:id="@+id/radioAnsChoice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"/>
   		<RadioButton android:id="@+id/radioAnsChoice4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"/>
   		<RadioButton android:id="@+id/radioAnsChoice5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
		
	<LinearLayout
	android:orientation="horizontal" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:paddingTop="15dp" >
    	<Button
    	android:id="@+id/buttonNextQuestion" 
    	android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/buttonNextQuestionLabel"
        android:onClick="nextQuestHandler" />
    	<Button
    	android:id="@+id/buttonQuit" 
    	android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/buttonQuitLabel"
        android:onClick="quitHandler" />
	</LinearLayout>
	    
</LinearLayout>